<resources>
    <string name="app_name">DemoOfLayouts</string>
    <array name="countryName">
        <item>IND</item>
        <item>USA</item>
        <item>UK</item>
        <item>USE</item>
    </array>
    <declare-styleable name="CustomComponentsOfBtn">
        <attr name="cust_txt" format="string" />
        <attr name="cust_btn" format="string" />
    </declare-styleable>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_runtimepermissionstar">runtimepermissionstarActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="basic">Basic Notification below 8.0</string>
    <string name="notifyDesc">This is a Basic Notification With Icon Upper 8.0</string>
    <string name="checkField">Empty Field Not Allow</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_runtime_permission_start">RuntimePermissionStartActivity</string>
    <string name="dialogbox">DialogBox</string>
    <string name="delete_records">Delete Records</string>
    <string name="batteryPercentage">Your Battery Percentage Is </string>

    <!-- Room DB Strings   -->
    <string name="roomTitle">Welcome To \n Room DataBase</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_acc_msg">Already have an account?</string>
    <string name="msg_createAccount">Don\'t have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="HelloMsg">Hello,</string>
    <string name="add_data">Add Data</string>
    <string name="delete_update_data">Delete Or Update Data</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="insert">Insert</string>
    <string name="cancel">Cancel</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="fab_btn">addHere</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_type">Map Type</string>
    <string name="satellite_map">SATELLITE Map</string>
    <string name="roadmap_map">ROADMAP Map</string>
    <string name="hybrid_map">HYBRID Map</string>
    <string name="terrain_map">TERRAIN Map</string>
    <string name="settings">Settings</string>
    <string name="hide_pointer">Hide location pointer</string>
    <string name="hide_current_btn">hide current Button</string>
    <string name="hide_zoom_btn">Hide zoom Button</string>


    <string name="on">Gps On</string>
    <string name="off">Gps off</string>
    <string name="get_location">Get Location</string>
    <string name="change_style">changeStyle</string>
    <string name="normal_json">Normal Json</string>
    <string name="gson_library">Gson Library</string>
    <string name="retrofit_product_list">Retrofit Product List</string>
    <string name="see_details_now">See Details Now</string>

    <string name="dollar_sign">Price : $%1$d</string>
    <string name="no_products">No Product Available</string>
    <string name="description">Description : %1$s</string>
    <string name="discount">Discount : %1$s %%</string>
    <string name="stock">Stock : %1$d</string>
    <string name="brandName">Company Name : %1$s</string>
    <string name="price_sign">Price : $</string>
    <string name="category">Category : </string>
    <string name="product_name_title">Product : </string>
    <string name="address">Address</string>
    <string name="enter_any_topic">Enter Any Topic</string>
    <string name="save">save</string>
    <string name="userinfo">UserInfo</string>
    <string name="edit">Edit</string>


</resources>