<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="userInfo"
            type="com.example.demooflayouts.liveDataViewModel.data.UserInfo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".liveDataViewModel.ui.AddDataFragment">

        <TextView
            android:id="@+id/title_tv_frg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/add_data"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/name_et"
            style="@style/CustomEditTextStyle"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="@id/title_tv_frg"
            app:layout_constraintStart_toStartOf="@id/title_tv_frg"
            app:layout_constraintTop_toBottomOf="@id/title_tv_frg" />

        <EditText
            android:id="@+id/phone_et"
            style="@style/CustomEditTextStyle"
            android:hint="@string/number"
            app:layout_constraintStart_toStartOf="@id/name_et"
            app:layout_constraintEnd_toEndOf="@id/name_et"
            app:layout_constraintTop_toBottomOf="@id/name_et" />

        <EditText
            android:id="@+id/mail_et"
            style="@style/CustomEditTextStyle"
            android:hint="@string/email"
            app:layout_constraintStart_toStartOf="@id/name_et"
            app:layout_constraintEnd_toEndOf="@id/name_et"
            app:layout_constraintTop_toBottomOf="@id/phone_et" />

        <EditText
            android:id="@+id/address_et"
            style="@style/CustomEditTextStyle"
            android:hint="@string/address"
            app:layout_constraintStart_toStartOf="@id/name_et"
            app:layout_constraintEnd_toEndOf="@id/name_et"
            app:layout_constraintTop_toBottomOf="@id/mail_et" />

        <EditText
            android:id="@+id/topic_et"
            style="@style/CustomEditTextStyle"
            android:hint="@string/enter_any_topic"
            app:layout_constraintStart_toStartOf="@id/name_et"
            app:layout_constraintEnd_toEndOf="@id/name_et"
            app:layout_constraintTop_toBottomOf="@id/address_et" />

        <Button
            android:id="@+id/save_btn"
            style="@style/CustomButtonStyle"
            android:text="@string/save"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/name_et"
            app:layout_constraintEnd_toEndOf="@id/name_et"
            app:layout_constraintTop_toBottomOf="@id/topic_et" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>