<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".roomDBTask.CreateAccountActivity">

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_sign_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_background"
        android:elevation="@dimen/elevation_s"
        android:focusable="auto"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_sign_up"
        app:layout_constraintStart_toStartOf="@+id/tv_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up" />


    <EditText
        android:id="@+id/et_sign_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background"
        android:elevation="@dimen/elevation_s"
        android:focusable="auto"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_sign_name"
        app:layout_constraintStart_toStartOf="@+id/et_sign_name"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_name" />

    <EditText
        android:id="@+id/et_phoneNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:elevation="@dimen/elevation_s"
        android:ems="10"
        android:hint="@string/number"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/tv_sign_up"
        app:layout_constraintStart_toStartOf="@id/tv_sign_up"
        app:layout_constraintTop_toBottomOf="@id/et_sign_email"
        />

    <EditText
        android:id="@+id/et_sign_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:elevation="@dimen/elevation_s"
        android:ems="10"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_sign_up"
        app:layout_constraintStart_toStartOf="@+id/tv_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/et_phoneNo" />

    <EditText
        android:id="@+id/et_confirm_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:elevation="@dimen/elevation_s"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/tv_sign_up"
        app:layout_constraintStart_toStartOf="@id/tv_sign_up"
        app:layout_constraintTop_toBottomOf="@id/et_sign_password"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/et_confirm_pass"
        app:layout_constraintStart_toStartOf="@+id/et_confirm_pass"
        app:layout_constraintTop_toBottomOf="@+id/et_confirm_pass" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" >
    <TextView
        android:id="@+id/tv_signup_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_acc_msg"
        android:textColor="@color/light_blue"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_login_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/dark_blue"
        android:layout_marginStart="5dp"
        android:textStyle="bold"/>
          </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>